--- a/styles/header.css
+++ b/styles/header.css
@@ -9,8 +9,12 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
 
   background-color: white;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgb(224, 224, 224);
 }
 
 .left-section {
@@ -105,7 +109,27 @@
   height: 24px;
 }
 
+.notifications-icon-container {
+  position: relative;
+}
+
+.notifications-count {
+  position: absolute;
+  top: -2px;
+  right: -5px;
+  background-color: rgb(214, 0, 0);
+  color: white;
+  font-size: 11px;
+  font-family: Roboto, Arial;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 10px;
+}
+
 .current-user-picture {
   height: 32px;
   border-radius: 16px;
 }
+
